changed build to make ware file and tested war by adding to docker

--- a/src/main/java/org/smaptest/server/web/html/test.html
+++ b/src/main/java/org/smaptest/server/web/html/test.html
@@ -10,8 +10,8 @@
 
 <body>
 	<ul>
-		<li><a href='http://127.0.0.1:8080/smaptest/service/hello'>~/service/hello</a></li>
-		<li><a href='http://127.0.0.1:8080/smaptest/service/serverinfo'>~/service/serverinfo</a></li>
+		<li><a href='http://127.0.0.1:8080/smap/service/hello'>~/service/hello</a></li>
+		<li><a href='http://127.0.0.1:8080/smap/service/serverinfo'>~/service/serverinfo</a></li>
 	</ul>
 </body>
 
